--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8 ie9" lang="de"> <![endif]-->
+<!--[if IE 9 ]><html class="ie ie9" lang="de"> <![endif]-->
+<!--[if (gte IE 10)|!(IE)]><!--><html class="no-js" lang="de"> <!--<![endif]-->
 <head>
 <title>Regiomino - besser von hier</title>
 <meta charset="utf-8">
