--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ World Vision ist eine christliche Hilfsorganisation mit den Arbeitsschwerpunkten
                             </div>
                              
                             <div class="benefit engage">
-                                <h3>Sie setzten sich ein</h3>
+                                <h3>Sie setzen sich ein</h3>
                                 <p> Unterstützen Sie Ihre Region und werben Sie damit.   </p>
                             </div>
                         </div> 
