--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 <link rel="stylesheet" href="css/style.css">
- 
- 
+<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <script type="text/javascript" src="js/modernizr.js"></script>
 </head>
 <body>
@@ -106,7 +105,7 @@
 						<div class="triangle"></div>
 					</div>
 					<div class="tara-services-content">
-						<h2>Software</h2>
+						<h2>Infrastruktur</h2>
 						<p>
 						Regiominos intelligentes System organisiert das Angebot von Regionalerzeugnissen und deren Beschaffung neu: Die Verkaufs- und Logistikprozesse von Direktvermarktern und Spediteuren sind abgebildet und miteinander verbunden. Damit können in einer Region viele Kunden einfach online einkaufen sowie viele Verkäufer und Spediteure einfach anbieten.
 						</p>
@@ -663,7 +662,7 @@ World Vision ist eine christliche Hilfsorganisation mit den Arbeitsschwerpunkten
                     <div class="full-width contact-footer clearfix">
                          <div class="contact-separator">  </div>
                             <img alt="ThemeFlame"   src="images/logo.png" />
-                            <p class="">&copy; Regiomino 2014</p>
+                            <p class="copyright">&copy; Regiomino 2014</p>
                     </div>
                     
                 </div>
@@ -693,6 +692,6 @@ World Vision ist eine christliche Hilfsorganisation mit den Arbeitsschwerpunkten
   ga('create', 'UA-40144139-2', 'regiomino.biz');
   ga('send', 'pageview');
 
-        </script>  
+        </script> 
 </body>
 </html>
