--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@ Außerdem bleibt unser Geld in unserem regionalen Wirtschaftskreislauf.
                 </div>
                 
                 <div class="form-wrapper left">
-                    <form action="email.php">
+                    <form action="email.php" class="contact-form">
                         <div class="formrow">
                             <input type="text" name="yourname" placeholder="Ihr Name" title="Ihr Name" value="" />
                             <div class="error"></div>
