--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <h1>Regiomino</h1>
                         <div class="subtitle">
                                 <h2>Regiomino ( <a target="_blank" class="ext" href="http://www.regiomino.de/" title="Regiomino - Besser von hier">www.regiomino.de </a>) ist ein kostenloser Online-Marktplatz für regional erzeugte Produkte.
-Sie Kaufen und Verkaufen komfortabel online, wir kümmern uns um Abholung und Lieferung. 
+Sie kaufen und verkaufen komfortabel online, wir kümmern uns um Abholung und Lieferung. 
 </h2>
                         </div>
                         <div class="line">
