Bernd Schiller dazu

--- a/index.html
+++ b/index.html
@@ -723,6 +723,31 @@ davon profitieren."
                         </div>
                         
                        </div>
+                       <div class="row clearfix">
+                        <div class="item clearfix">
+                             <div class="image"> 
+                                <img alt="Bernd Schiller" src="images/aboutus/bernd_schiller.jpg" />
+                             </div>
+                            <div class="about-text">
+                                <h2>Bernd Schiller</h2>
+                                <h3>Kundensupport</h3>
+                                <p>Bernd Schilller ist seit Mitte 2013 an Bord. Er ist mit seiner Imkerei
+einer unserer Verkäufer und betreut unsere Verkäufer mit ihrem Sortiment.
+Bernd kennt den Umgang mit Kunden und Verkäufern, und weiß mit Sorgen und
+Problemchen umzugehen. Intern wird er als "Bug-Hunter" hoch geschätzt, da
+er permanent die neuesten Features der Regiomino-Seiten ausprobiert, und
+sofort auf Bugs (Fehler) aufmerksam wird.
+                                </p>
+                                <p class="quote">"Bernd Schilller ist seit Mitte 2013 an Bord. Er ist mit seiner Imkerei
+einer unserer Verkäufer und betreut unsere Verkäufer mit ihrem Sortiment.
+Bernd kennt den Umgang mit Kunden und Verkäufern, und weiß mit Sorgen und
+Problemchen umzugehen. Intern wird er als "Bug-Hunter" hoch geschätzt, da
+er permanent die neuesten Features der Regiomino-Seiten ausprobiert, und
+sofort auf Bugs (Fehler) aufmerksam wird."
+                                </p>
+                            </div>
+                        </div>
+                       </div>
                        
                     </div>
                 </div>
