--- a/index.html
+++ b/index.html
@@ -738,12 +738,10 @@ Problemchen umzugehen. Intern wird er als "Bug-Hunter" hoch geschätzt, da
 er permanent die neuesten Features der Regiomino-Seiten ausprobiert, und
 sofort auf Bugs (Fehler) aufmerksam wird.
                                 </p>
-                                <p class="quote">"Bernd Schilller ist seit Mitte 2013 an Bord. Er ist mit seiner Imkerei
-einer unserer Verkäufer und betreut unsere Verkäufer mit ihrem Sortiment.
-Bernd kennt den Umgang mit Kunden und Verkäufern, und weiß mit Sorgen und
-Problemchen umzugehen. Intern wird er als "Bug-Hunter" hoch geschätzt, da
-er permanent die neuesten Features der Regiomino-Seiten ausprobiert, und
-sofort auf Bugs (Fehler) aufmerksam wird."
+                                <p class="quote">"Ich war schon vor der Zeit mit Regiomino in der regionalen Vermarktung
+tätig, weil ich hinter Regionalität stehe. Regiomino ermöglicht heimischen
+Produzenten und Betrieben zu bestehen. Und Verbraucher wissen, wer hinter
+den Produkten steht. Diese Plattform sucht seines gleichen."
                                 </p>
                             </div>
                         </div>
